chore(dev): simplify propery builder (#73)
Simplify building the property pojo via a dedicated builder.